--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/db": "^0.14.3",
+    "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/roboto": "^5.1.0",
+    "@iconify-json/lucide": "^1.2.15",
+    "astro": "^4.16.13",
+    "astro-icon": "^1.1.2",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "sass": "^1.81.0"
   }
 }
