misael:Updated Home

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/db": "^0.14.3",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/roboto": "^5.1.0",
     "@iconify-json/lucide": "^1.2.15",
